# ecm-webdev-backend

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  Dockerfile  conftest.py  dependencies.py  server.py
backend/domain/: events.py
backend/events/: bus.py  subscribers.py
backend/factories/: game_player_factory.py  game_room_factory.py
backend/games/: abstract.py  connect_four.py
backend/games/connect_four/: consts.py  game.py  schemas.py
backend/infra/: memory_event_store.py  memory_game_store.py  snapshots.py
backend/models/: game_player_model.py  game_room_model.py
backend/routers/: game_auth_router.py  game_room_router.py  websocket.py  websocket_schemas.py
backend/schemas/websocket/: client.py  server.py
backend/services/: game_room_service.py  game_service.py  room_streamer.py
backend/state/: connection_manager.py
backend/tests/: test_app.py
backend/tests/test_events/: test_bus.py  test_subscribers.py
backend/tests/test_games/: test_abstract.py  test_connect_four.py
backend/tests/test_infra/: test_memory_event_store.py  test_memory_game_store.py  test_snapshots.py
backend/tests/test_models/: test_game_room_model.py
backend/tests/test_routers/: test_game_auth_router.py  test_game_room_router.py  test_websocket.py
backend/tests/test_services/: test_game_room_service.py  test_game_service.py  test_room_streamer.py
backend/tests/test_state/: test_connection_manager.py
backend/utils/: classes.py  db.py  env.py  errors.py  event.py  future.py  game_utils.py  security.py
frontend/: .dockerignore  .yarnrc.yml  Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx  router.tsx
scripts/: generate_ssl_certificates.py
(+47 files in other folders)
